# pygoose

./: README.md  main.py  prefix.json  pyproject.toml
cogs/: auto.py  bot.py  custom.py  fun.py  help.py  log.py  misc.py  mod.py  react.py  search.py  xp.py
web/: server.py
