[tool.poetry]
name = "repl_python3_GooseDictator"
version = "0.1.0"
description = ""
authors = ["GoogleGeniuis"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
discord-py-slash-command = "^2.3.2"
discord-components = "^1.1.4"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
